configurando  API de mapa

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +9,9 @@
     <title>Projeto Banco de dados</title>
 </head>
 <body>
+
     <div class="form" id="form">
-        <form class="formulario" method="post">
+        <form class="formulario" method="post" action="map.html">
             <p>Preencha os campos</p>
 
             <div class="field">
