--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="form" id="form">
-        <form class="formulario" method="post" action="map.html">
+        <form action="map.html" class="formulario" method="post">
             <p>Preencha os campos</p>
 
             <div class="field">
