--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./public/css/style.css">
+    <link type="text/css" rel="stylesheet"  href="/css/style.css">
+    <link rel="FaviconIcon" href="./favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <title>Projeto Banco de dados</title>
 </head>
 <body>
 
     <div class="form" id="form">
-        <form action="map.html" class="formulario" method="post">
+        <form class="formulario" method="post" action="/map">
             <p>Preencha os campos</p>
 
             <div class="field">
@@ -52,7 +53,7 @@
                 <textarea name="comentario" id="comentario" placeholder="Comentário*" required></textarea>
             </div>
 
-            <input type="submit" name="acao" value="Enviar">
+            <input type="submit" value="Enviar">
         </form>
     </div>
     
