--- a/map.html
+++ b/map.html
@@ -19,11 +19,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#" onclick="startDrawing()">Adicionar ponto</a>
-          </li>
+          </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Preencher Formulário</a>
+            <a class="nav-link" href="/">Preencher Formulário</a>
           </li>
         </ul>
       </div>
